--- a/conversor_decimal/main.css
+++ b/conversor_decimal/main.css
@@ -59,12 +59,16 @@ h3{
 }
 
 input[type="text"]{
-    outline: none;
-    background-color: #aaaaaa ;
-    border: none;
     padding: 15px;
     width: 100%;
-    font-size: 18px;
+
+    border: 2px solid var(--background-color);
+  font: 300 1.2rem sans-serif;
+  color: white;
+  border-radius: 0.2rem;
+  background: var(--background-color);
+
+  outline: none;
 
 }
 
@@ -73,15 +77,30 @@ input[type="text"]::placeholder{
     color: rgba(0, 0, 0, 0.452);
 }
 
-input[type="button"]{
-    font-family: 'Archivo', sans-serif;
-    outline: none;
-    cursor: pointer;
-    padding: 15px;
-    width: 100%;
-    background-color: #6e5c83;
-    border: none;
-    font-size: 16px;
-    border-radius: 5px;
 
+input[type="button"]{
+    transition: 300ms;
+
+  margin: 0.4rem;
+  padding: 15px;
+
+
+  width: 100%;
+
+  font: 700 0.8rem 'Archivo';
+  text-transform: uppercase;
+
+  background: var(--button-normal-color);
+  color: white;
+
+  border-radius: 0.2rem;
+  border: 2px solid var(--button-normal-color);
+}
+
+input[type="button"]:hover{
+    cursor: pointer;
+  transition: 300ms;
+
+  background: var(--background-color);
+  border: 2px solid var(--button-normal-color);
 }
